# researchs-web-scrapper-for-UniSER

./: .dockerignore  .env.example  .gitignore  CORRECAO_EXPORTACAO_FINAL.md  DOCKER_IMPLEMENTATION_SUMMARY.md  GUIA-RAPIDO.txt  INDICE_H_IMPLEMENTACAO.md  INICIAR.bat  LEIA-ME.md  LICENSE  Makefile  README.md  README_UPDATE_SUMMARY.md  SOLUCOES_IMPLEMENTADAS.md  debug_api_structure.py  debug_h_index.py  fix_excel_imports.py  fix_syntax.py  install_and_setup.bat  install_and_setup.sh  lattes_api_integration.py  lattes_chromedriver_system.py  main.py  pyproject.toml  requirements-api.txt  requirements-windows.txt  requirements.txt  start_backend.bat  start_backend.sh  start_frontend.bat  start_frontend.sh  test_quick.py
__tests__/: test_api_endpoint.py  test_escavador_integration.py  test_excel_manual.py  test_export_functionality.py  test_export_with_data.py  test_h_index.py  test_multiple_profiles.py  test_multiple_publications.py  test_problematic_scenarios.py  test_query_field.py  test_scholar_endpoint.py
docker/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  healthcheck.py  init-mongo.js  nginx.conf  setup.bat  setup.sh
docs/: ESCAVADOR_INTEGRATION.md  RESUMO_IMPLEMENTACAO.md
exports/: autor_Michelle Moretti_Michelle_Moretti_20251011_010729.xlsx  excel_consolidado_20251014_223418.xlsx  excel_consolidado_20251014_223549.xlsx  excel_consolidado_20251014_223729.xlsx  lattes_analysis_Maria_Silva_20251011_012629.xlsx
frontend/: debug_test.js  index.html  package-lock.json  package.json  tailwind.config.js  test_debug.js
scripts/: check_requirements.bat  (+2 more)
(+55 files in other folders)
