[project]
name = "web-scraper-uniser"
version = "0.1.0"
description = "A fast researchers projects/articles/works finder for academic and more research purpose"
authors = [
    {name = "LUCAS ZANETTI"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "typer (>=0.19.2,<0.20.0)",
    "fastapi (>=0.117.1,<0.118.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.13.1,<0.14.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pymongo (>=4.6.0,<5.0.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "selenium (>=4.15.0,<5.0.0)",
    "fake-useragent (>=1.5.0,<2.0.0)",
    "aiohttp (>=3.9.0,<4.0.0)",
    "jinja2 (>=3.1.0,<4.0.0)",
    "python-multipart (>=0.0.9,<0.1.0)",
    "openpyxl (>=3.1.0,<4.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "lxml (>=5.0.0,<6.0.0)",
    "httpx (>=0.25.0,<1.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "serpapi (>=0.1.5,<0.2.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "motor (>=3.7.1,<4.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "google-search-results (>=2.4.2,<3.0.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)",
    "pydantic (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

